GGB-798 Fix: - sometimes the "Input..." label jumps to the very left, overlaps with help button.
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@49184 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -3422,7 +3422,9 @@ body.application[dir=rtl] .imageCorner {
 	box-sizing: border-box;
 }
 
-.NewRadioButtonTreeItemParent .scrollableTextBox{
+.NewRadioButtonTreeItemParent .scrollableTextBox,
+.NewRadioButtonTreeItemParent .inputBorder
+{
 	border-top: #6161FF solid 1px;
 	border-bottom:	#6161FF solid 1px;
 	min-height:61px;
